# uaibot_vinicius

./: .gitignore  README.md  abb_helper_2.py  main.py  main2.py  main3.py  pyproject.toml  requirements.txt
contents/DaVinciSi/: mths
contents/Simulation/: article_simulation.html  control_demo_1.html  control_demo_2.html  control_demo_3.html  control_demo_4.html
test/: abb_helper.py  abb_helper_2.py  anim_aula_1a.py  anim_aula_1b.py  anim_aula_1c.py  anim_aula_2a.py  anim_aula_2b.py  anim_aula_2c.py  anim_aula_3a.py  anim_aula_3b.py  anim_aula_4a.py  anim_aula_4b.py  anim_aula_4c.py  anim_aula_4d.py  anim_aula_4e.py  anim_aula_4f.py  anim_aula_5a.py  anim_aula_5b.py  anim_aula_5c.py  anim_aula_5d.py  anim_aula_5e.py  anim_aula_5f.py  anim_aula_5g.py  anim_aula_5h.py  anim_exercicio_1.py  create_darwin_mini_helper_2.py  create_darwin_mini_helper_3.py  create_darwin_mini_helper_4.py  create_darwin_mini_helper_5.py  darwin_mini_helper.py  main.py  main2.py  main3.py  new_test.py  rl_test.py  robot_create_helper.py  test_ana_jac.py  test_kuka_per.py  test_model3d.py
test/test_collision/: collision_map.py  control_collision.py  main2.py  main3.py  main4.py  main_test.py  show_slice.py  test_aabb.py
test/test_felipe/: test.py
test/test_quadrotor/: control_target.py  control_target_2.py  ispathfree.py  main_movement.py  test_object_movement.py  test_second_order.py
uaibot/: __init__.py  requirements.txt  setup.py  simulation.py  threejs_sim.js  utils.py
uaibot/algorithm/: rrt.py
uaibot/demo/: _control_davinci.py  _control_demo_1.py  _control_demo_2.py  demo.py  (+7 more)
(+62 files in other folders)
