[tool.poetry]
name = "uaibot"
version = "0.0.1"
description = "A browser-based robotic simulator"
authors = ["Vinicius Gonçalves <vinicius.marianog@gmail.com>", "Johnata Brayan <johnatabrayan@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
colour = "^0.1.5"
cvxopt = "^1.2.7"
gym = "^0.21.0"
ipython = "^7.0.0"
numpy = "^1.21.5"
plotly = "^5.5.0"
httplib2 = "^0.20.4"
pycollada= "^0.7.2"
PyWavefront= "^1.3.3"
numpy-stl= "^2.16.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
